<resources>
    <string name="app_name">Poe part 2</string>
    <string name="styled_text">Wise<font color="#00ADB5">Saver</font></string>
    <string name="styled_text2">W<font color="#00ADB5">e</font>lc<font color="#00ADB5">o</font>m<font color="#00ADB5">e</font></string>
    <string name="guide"><font color="#00ADB5">How to use guide</font></string>
    <string name="succces">Succces</string>
    <string name="title_account_management">Account Management</string>
    <string name="label_current_account">CURRENT ACCOUNT:</string>
    <string name="label_other_accounts">OTHER ACCOUNTS:</string>
    <string name="text_cheque_account">Cheque Account</string>
    <string name="text_savings_account">Savings Account</string>
    <string name="bank_nedbank">Nedbank</string>
    <string name="bank_standardbank">Standard Bank</string>
    <string name="masked_nedbank">************1568</string>
    <string name="masked_standardbank">************8467</string>
    <string name="btn_add_account">Add Account</string>
    <!--  Image Descriptions  -->
    <string name="back_icon">Back</string>
    <string name="dropdown_icon">Dropdown</string>
    <string name="nedbank_logo">Nedbank Logo</string>
    <string name="standardbank_logo">Standard Bank Logo</string>
    <string name="menu">Menu</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="welcome_elton">Hi, Elton</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="notifications">Notifications</string>
    <string name="help_faq">Help &amp; FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="add">Add</string>
    <string name="user">User</string>
</resources>